@@ -5,6 +5,7 @@ Release ...
   multiple font file arguments were given. This has been fixed.
 * troff: Fonts that contain possible ligatures (fi, fl, etc.) in their file
   names are now mounted correctly.
+* dpost: No longer leaves a stale temporary file in /var/tmp.
 
 Release 051011
 * troff/dpost: Support for OpenType fonts has been added. This includes
